# NativeBitmap

./: gradle.properties  settings.gradle
app/: build.gradle
app/src/main/java/com/ptrain/nativebitmap/: MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
hook/: build.gradle  pom.properties
hook/src/main/cpp/: CMakeLists.txt  native_bitmap.cpp  thread_hook_jni.cpp
hook/src/main/cpp/hook/: thread_hook.cpp  thread_hook.h
hook/src/main/cpp/log/: logger.h
hook/src/main/java/com/mico/libx/hook/nativebitmap/: NativeBitmap.kt
hook/src/main/java/com/mico/libx/hook/shadowhook/: ShadowHookManager.kt
hook/src/main/java/com/mico/libx/hook/thread/: ThreadHook.kt
nativebitmap/: build.gradle  pom.properties
